--- a/src/style/index.less
+++ b/src/style/index.less
@@ -29,14 +29,16 @@
       .multiple-ant-input-item {
         position: relative;
         display: inline-block;
-        height: 22px;
-        line-height: 19px;
+        height: 20px;
+        line-height: 20px;
         margin-top: 3px;
         vertical-align: top;
-        background: #fafafa;
-        border: 1px solid #e8e8ee;
+        background: #f3f3f3;
         box-sizing: border-box;
-        border-radius: 2px;
+        border-radius: 4px;
+        border: 0;
+        font-size: 12px;
+        color: rgba(0, 0, 0, 0.65);
         .prefix, .suffix {
           display: inline-block;
           width: 5px;
